<resources>
    <string name="app_name">可信安全中心</string>
    <string name="action_settings">设置</string>


    <string name="tip_loading">正在加载中...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_name">名称</string>
    <string name="str_title">标题</string>
    <string name="str_has_selected">已选（0）</string>
    <string name="str_next">下一步</string>
    <string name="str_device_name">设备名称</string>
    <string name="str_has_no_any_msg">您还没有新消息哦~</string>
    <string name="str_update_version">更新新版本</string>
    <string name="str_feedback">帮助与反馈</string>
    <string name="str_web_transfer">网页传</string>

    <string name="str_harassment_interception">骚扰拦截</string>
    <string name="str_virus_scan">病毒扫描</string>
    <string name="str_background">后台管理</string>
    <string name="str_permission">权限管理</string>
    <string name="str_network">联网管理</string>
    <string name="donate">捐助</string>


    <string name="rank">立即体检</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_connect_device_count">连接设备数</string>
    <string name="str_0">0</string>
    <string name="tip_call_back_agin_and_exist">再按一次就退出 {appName} </string>
    <string name="str_unit_mb">MB</string>
    <string name="str_about_me">关于作者</string>
    <string name="tip_next_version_update">此功能下个版本更新</string>
    <string name="title_about_me">关于作者</string>
    <string name="str_about_me_desc">感谢各位大佬的支持！</string>
    <string name="str_about_me_qq">QQ：345269374</string>
    <string name="str_about_me_email">Emial:345269374@qq.com</string>
    <string name="str_about_me_github">Github:https://github.com/WarmSnowy/pkManager</string>
    <string name="str_weiguan">Star一下！</string>


    <string name="tip_permission_denied">权限被拒绝</string>

    <string name="title_activity_app_switch">权限管理</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_apppermissions_setting">APPPermissionsSettingActivity</string>
    <string name="allow">允许</string>
    <string name="deny">禁止</string>
    <string name="title_activity_app_hooks_settings">权限管理</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
